# axosyslog

./: configure.ac
.github/: zizmor.yml
.github/workflows/: axosyslog-builder.yml  axosyslog-charts-lint.yml  axosyslog-charts-release.yml  axosyslog-docker.yml  axosyslog-image-snapshot.yml  axosyslog-image-test.yml  axosyslog-nightly.yml  comment-cfg-grammar-changes.yml  comment-on-version-bump-pr.yml  create-packages.yml  dbld-images.yml  devshell.yml  devshell_light_valgrind.yml  draft-release.yml  gh-workflow-check.yml  index-packages.yml  macos.yml  nightly-release.yml  package-indexer-checks.yml  packages.yml  release-light.yml  test-apt-packages.yml  upload-packages.yml  version-bump.yml
dbld/: rules
lib/filterx/: CMakeLists.txt  Makefile.am  expr-function.h  expr-generator.c  expr-literal-container.c  expr-literal-generator.c  filterx-allocator.c  filterx-allocator.h  filterx-eval.c  filterx-eval.h  filterx-globals.c  filterx-grammar.ym  filterx-metrics-labels.c  filterx-metrics-labels.h  filterx-metrics.c  filterx-metrics.h  filterx-object.h  filterx-pipe.c  func-unset-empties.c  object-metrics-labels.c  object-string.c
lib/logmsg/: logmsg.c
lib/logproto/: logproto-text-client.c
lib/metrics/: metrics-tls-cache.c  metrics-tls-cache.h
lib/transport/: transport-tls.c
modules/cloud-auth/: azure-auth.cpp
modules/diskq/: logqueue-disk-non-reliable.c
modules/json/: filterx-cache-json-file.c
modules/metrics-probe/filterx/: CMakeLists.txt  Makefile.am  metrics-probe-filterx.c  metrics-probe-filterx.h
syslog-ng/: Makefile.am
tests/light/: README.md  (+1 more)
(+36 files in other folders)
